bk_ida/gccida/g2/local_alloc
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:815:4: error: expected ';' after expression
rtx reg_note; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:815:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // r15 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:820:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:820:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:835:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:835:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:883:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class alternate_class; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:922:4: error: expected ';' after expression
rtx init_insns; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:922:5: error: use of undeclared identifier 'init_insns'; did you mean 'emit_insns'?
rtx init_insns; // rax 
    ^~~~~~~~~~
    emit_insns
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/rtl.h:1335:12: note: 'emit_insns' declared here
extern rtx emit_insns                   PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:936:4: error: expected ';' after expression
rtx v136; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:936:5: error: use of undeclared identifier 'v136'
rtx v136; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:937:4: error: expected ';' after expression
rtx v137; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:937:5: error: use of undeclared identifier 'v137'
rtx v137; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:945:4: error: expected ';' after expression
rtx v145; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:945:5: error: use of undeclared identifier 'v145'
rtx v145; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:955:4: error: expected ';' after expression
rtx v156; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:955:5: error: use of undeclared identifier 'v156'
rtx v156; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:959:4: error: expected ';' after expression
rtx hard_reg_initial_reg; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/local-alloc.c:959:5: error: use of undeclared identifier 'hard_reg_initial_reg'; did you mean 'get_hard_reg_initial_reg'?
rtx hard_reg_initial_reg; // rax 
    ^~~~~~~~~~~~~~~~~~~~
    get_hard_reg_initial_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/integrate.h:145:12: note: 'get_hard_reg_initial_reg' declared here
extern rtx get_hard_reg_initial_reg             PARAMS ((struct function *, rtx));
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/local_alloc/src/obj/local-alloc.o] Error 1
